Cropper script fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30028,4 +30028,16 @@ select.has-error:focus, input.has-error:focus, button.has-error:focus {
 table {
   font-size: 14px; }
 
+.summary-table thead {
+  color: #ddd; }
+
+table.summary-table tr td:not(:first-child) {
+  text-align: center; }
+
+table.summary-table.left-align tr td {
+  text-align: left; }
+
+.summary-table .no-hover td {
+  border-top: none !important; }
+
 /*# sourceMappingURL=app.css.map */
